force-app/main/default/objects/PricebookEntry.object
<CustomObject>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Currency__c</fullName>
        <formula>TEXT(Product2.Invoice_Currency__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fee Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <label>School</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>The British International School of Kuala Lumpur</fullName>
                </value>
                <value>
                    <fullName>The British School Yangon</fullName>
                </value>
                <value>
                    <fullName>The British School of Nanjing</fullName>
                </value>
                <value>
                    <fullName>Nord Anglia International School Manila</fullName>
                </value>
                <value>
                    <fullName>The International School of Moscow</fullName>
                </value>
                <value>
                    <fullName>The British School of Tashkent</fullName>
                </value>
                <value>
                    <fullName>The British International School of Marbella</fullName>
                </value>
                <value>
                    <fullName>The British School of Navarra</fullName>
                </value>
                <value>
                    <fullName>The New York International School</fullName>
                </value>
                <value>
                    <fullName>The British School of Brasilia</fullName>
                </value>
                <value>
                    <fullName>The British College of Brazil</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X18_Char_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Char ID</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Manila_Active</fullName>
        <columns>PRODUCT.NAME</columns>
        <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product2.Invoice_Currency__c</columns>
        <columns>PRODUCT.DEFAULT_PRICE</columns>
        <columns>Product2.Fee_Frequency__c</columns>
        <columns>PRODUCT.ACTIVE</columns>
        <columns>Product2.Description_of_fee__c</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>PRODUCT.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Manila (Active)</label>
        <language>en_US</language>
        <queue>Manila</queue>
        <sharedTo>
            <group>System_Administrators</group>
            <roleAndSubordinatesInternal>NAISM_Head_of_Administration</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Other_Fees</fullName>
        <columns>PRODUCT.NAME</columns>
        <columns>PRODUCT.CUSTOMER_PRODUCT_ID</columns>
        <columns>PRODUCT.DEFAULT_PRICE</columns>
        <columns>PRODUCT.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product2.Description_of_fee__c</field>
            <operation>equals</operation>
            <value>Other</value>
        </filters>
        <label>Other Fees</label>
        <language>en_US</language>
        <sharedTo>
            <group>System_Administrators</group>
        </sharedTo>
    </listViews>
</CustomObject>